llvm/test/gcd2.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/test/gcd2.llvm:24:12: error: use of undefined value '%ifstart'
  br label %ifstart
           ^
