llvm/test/gcd2.llvm
; ModuleID = 'GreatestCommonDivisor'

@a = internal global i32 10
@b = internal global i32 20

declare void @print_int(i32)

define i32 @main() {
entry:
  %z = alloca i32
  %a = load i32, i32* @a
  %b = load i32, i32* @b
  %calltmp = call i32 @gcd(i32 %a, i32 %b)
  call void @print_int(i32 %calltmp)
  ret i32 0
}

define i1 @iszero(i32 %a, i32 %b) {
entry:
  %a1 = alloca i32
  store i32 %a, i32* %a1
  %b2 = alloca i32
  store i32 %b, i32* %b2
  br label %ifstart
}

define i32 @gcd(i32 %a, i32 %b) {
entry:
  %a1 = alloca i32
  store i32 %a, i32* %a1
  %b2 = alloca i32
  store i32 %b, i32* %b2
  %a8 = load i32, i32* %a1
  %b9 = load i32, i32* %b2
  %calltmp10 = call i1 @iszero(i32 %a8, i32 %b9)
  ret i1 %calltmp10

ifstart:                                          ; preds = %entry
  %b3 = load i32, i32* %b2
  %ICmpEQtmp = icmp eq i32 %b3, 0
  br i1 %ICmpEQtmp, label %iftrue, label %iffalse

iftrue:                                           ; preds = %ifstart
  %a4 = load i32, i32* %a1
  ret i32 %a4
  br label %end

end:                                              ; preds = %iffalse, %iftrue
  ret i32 0

iffalse:                                          ; preds = %ifstart
  %b5 = load i32, i32* %b2
  %b6 = load i32, i32* %b2
  %a7 = load i32, i32* %a1
  %sremtmp = srem i32 %a7, %b6
  %calltmp = call i32 @gcd(i32 %b5, i32 %sremtmp)
  ret i32 %calltmp
  br label %end
}
